--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
   </div>
   <div class="search">
       <input type="search" class="srch"  placeholder="search for services">
-      <a href="#"><button class="btn">search</button></a>
+      <a href="../app/services/services.component.html"><button class="btn">search</button></a>
   </div> 
  <router-outlet></router-outlet>
   
