--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -208,6 +208,34 @@
   </div>
   <br>
   <br>
+  <div class="container-fluid">
+    <div class="container-fluid">
+      <div class="et_pb_section  et_pb_section_8 et_section_regular">
+          
+          
+          
+        <div class=" et_pb_row et_pb_row_9">
+      <div class="et_pb_column et_pb_column_4_4  et_pb_column_24 et-last-child">
+    
+      
+      <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_center  et_pb_text_9">
+      
+      
+      <div class="et_pb_text_inner">
+        GET IN TOUCH WITH US 
+      </div>
+    </div> <!-- .et_pb_text --><div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_10">
+      
+      
+      <div class="et_pb_text_inner">
+        <h2>Just a few of the poeple we work with</h2>
+      </div>
+    </div> <!-- .et_pb_text -->
+    </div> <!-- .et_pb_column -->
+    </div> 
+    </div>
+    </div>
+  </div>
   <div class="container-fuid">
     <div class="row">
       <div class="col-sm-3">
