--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -41,7 +41,7 @@
    </div> 
    <div class="ceo">
     <div class="ceo-img">
-      <img src="../../assets/images/home-photo-1.jpg" alt="mashombo-picture" style="width:400px;height: 200px;"><h2>MLAU .A. MASHOMBO</h2><span>Managing Director</span></div>
+      <img src="../../assets/images/mlau.jpeg" alt="mashombo-picture" style="width:400px;height: 200px;"><h2>MLAU .A. MASHOMBO</h2><span>Managing Director</span></div>
    </div>
    <div class="content">Since our incorporation in <strong>2009</strong>,we always strive to provide quality work in 
     every job whether large or small .Our staff take great pride in staying abreast of new technology and trends .We 
