--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -168,7 +168,7 @@
       
       
       <div class="et_pb_text_inner">
-        <h2>Just a few of the poeple we work with</h2>
+        <h2>it's our pride to bring your project to life</h2>
       </div>
     </div> <!-- .et_pb_text -->
     </div> <!-- .et_pb_column -->
