--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -32,7 +32,7 @@
     <div class="card"><div class="card-header"></div></div><br>
     <div class="row">
         <div class="col">  <div class="card" style="width:400px">
-            <img class="card-img-top" src="../../assets/images/mashombo.jpeg" alt="Card image" style="width:100%">
+            <img class="card-img-top" src="../../assets/images/mlau.jpeg" alt="Card image" style="width:100%">
             <div class="card-body">
               <h4 class="card-title">MLAU MASSHOMBO</h4>
               <p class="card-text">Managing Director</p>
