--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -269,5 +269,5 @@ content: ".";
     padding: 10px;
     height: 50px;
     font-style: italic;
-    text-decoration-color: white;
+    color: white;
 }
