--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -159,6 +159,7 @@
         </ngb-carousel>
         
       </div>
+      
       <div class="col-sm-2">
         <ngb-carousel>
         
@@ -238,7 +239,7 @@
           </ng-template>
         
         </ngb-carousel>
-      </div>
+      </div> 
     </div>
   </div>
   <br>
@@ -258,7 +259,7 @@
       
       
       <div class="et_pb_text_inner">
-        GET IN TOUCH WITH US 
+        KEEP IN TOUCH WITH US 
       </div>
     </div> <!-- .et_pb_text --><div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_10">
       
@@ -305,8 +306,8 @@
       </div>
     </div>
   </div><br>
-  <div class="footer"><h4> © <!-- -->2023<!-- --> Mr.Electrical, Inc</h4></div>
-  <br><br>
+  <div class="footer"><h4> © <!-- -->2023<!-- --> Mr.Electrical, Inc</h4><span ><a href="../boqsystem/">admin</a></span></div><br><br>
+  
   
 
 </body>
