--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -41,7 +41,7 @@
    </div> 
    <div class="ceo">
     <div class="ceo-img">
-      <img src="../../assets/images/mlau.jpeg" alt="mashombo-picture" style="width:400px;height: 200px;"><h2>MLAU .A. MASHOMBO</h2><span>Managing Director</span></div>
+      <img src="../../assets/images/mlau.jpeg" alt="mashombo-picture" class="img-thumbnail" style="width:400px;height: 200px;"><h2>MLAU .A. MASHOMBO</h2><span>Managing Director</span></div>
    </div>
    <div class="content">Since our incorporation in <strong>2009</strong>,we always strive to provide quality work in 
     every job whether large or small .Our staff take great pride in staying abreast of new technology and trends .We 
@@ -188,7 +188,7 @@ having no on-job accidents.
      Our ultimate goal of
      totally eliminating
      occupational injuries.
-     <div class="picture"><img src="../../assets/images/solar-electrical-contractors-600x315h.jpg" ></div>
+     <div class="picture"><img src="../../assets/images/solar-electrical-contractors-600x315h.jpg" class="img-thumbnail" ></div>
     </div>
    </div>    
   </div>
@@ -300,10 +300,40 @@ having no on-job accidents.
   </div>
   <br>
   <br>
+  <div class="container-fluid">
+    <div class="container-fluid">
+      <div class="et_pb_section  et_pb_section_8 et_section_regular">
+          
+          
+          
+        <div class=" et_pb_row et_pb_row_9">
+      <div class="et_pb_column et_pb_column_4_4  et_pb_column_24 et-last-child">
+    
+      
+      <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_center  et_pb_text_9">
+      
+      
+      <div class="et_pb_text_inner">
+        KEEP IN TOUCH WITH US 
+      </div>
+    </div> <!-- .et_pb_text --><div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_10">
+      
+      
+      <div class="et_pb_text_inner">
+        <h2>it's our pride to bring your project to life</h2>
+      </div>
+    </div> <!-- .et_pb_text -->
+    </div> <!-- .et_pb_column -->
+    </div> 
+    </div>
+    </div>
+  </div>
   <div class="container-fuid">
     <div class="row">
       <div class="col-sm-3">
-        <h1>MORE INFORMATION?</h1>
+        <video width="340" height="270" autoplay muted>
+          <source type="video/mp4; codecs=avc1.4D401E,mp4a.40.2" src="https://github.githubassets.com/images/modules/site/home/globe-900.h264.mp4">
+        </video>
       </div>
       <div class="col-sm-3"><img src="../../assets/images/location-icon-location-icon-png-blue.jpeg" style="width:70px;height:70px;">
        <h4 class="g1">MR.ELECTRICAL LTD</h4>
@@ -331,6 +361,6 @@ having no on-job accidents.
       </div>
     </div>
   </div><br>
-  <div class="footer"><h4>2023.All rights reserved </h4></div>
+  <div class="footer"><h4> © <!-- -->2023<!-- --> Mr.Electrical, Inc</h4></div>
   </body>
 </html>
