--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -297,6 +297,34 @@
     </div>
     <br>
     <br>
+    <div class="container-fluid">
+      <div class="container-fluid">
+        <div class="et_pb_section  et_pb_section_8 et_section_regular">
+            
+            
+            
+          <div class=" et_pb_row et_pb_row_9">
+        <div class="et_pb_column et_pb_column_4_4  et_pb_column_24 et-last-child">
+      
+        
+        <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_center  et_pb_text_9">
+        
+        
+        <div class="et_pb_text_inner">
+          KEEP IN TOUCH WITH US 
+        </div>
+      </div> <!-- .et_pb_text --><div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_10">
+        
+        
+        <div class="et_pb_text_inner">
+          <h2>it's our pride to bring your project to life</h2>
+        </div>
+      </div> <!-- .et_pb_text -->
+      </div> <!-- .et_pb_column -->
+      </div> 
+      </div>
+      </div>
+    </div>
     <div class="container-fuid">
       <div class="row">
         <div class="col-sm-3">
