--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -11,35 +11,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <div class="head">
-    <div class="mt-4 p-5 bg-primary text-white rounded">
-        <h1>WELCOME ON BOARD </h1>
-        <span>Here is the list of available produts and their prices </span>
-        <div class="add">
-          <button type="button" class="btn btn-primary" style="background-color:white; color:blue;" routerLink="../add-Product">
-            Add product
-          </button>
-       
-        </div>
-      </div>
+    
+  <div class="subscribe">
+    <p>PLEASE ADD A NEW PRODUCT</p>
+    <input placeholder="Product Description" class="subscribe-input" [(ngModel)]="product.description" name="description"><br><br><br><br>
+    <input placeholder="Product Quantity" class="subscribe-input" [(ngModel)]="product.Quantity" name="Quantity"><br><br><br><br>
+    <input placeholder="Product Amount" class="subscribe-input" [(ngModel)]="product.amount" name="amount">
+    <div class="submit-btn" (click)="newProduct(product)">ADD</div>
   </div>
-  <br>
-  <br>
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>Description</th>
-        <th>Quantity</th>
-        <th>Amount</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let product of products">
-        <td>{{product.description}}</td>
-        <td>{{product.Quantity}}</td>
-        <td>{{product.amount}}</td>
-      </tr>
-  </table>
-  
+
 </body>
 </html>
