--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -131,28 +131,28 @@
     <div class="row">
      <div class="col-sm-3">
      <ul>
-      <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p3"><h1>Industry Experts</h1></div></li>
-      <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p4"><h1>Highily Qualified</h1></div></li>
-      <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p6"><h1>Professional Teams</h1></div></li>
+      <li style="color: white;"><i class="material-icons" style="font-size:48px;color:red">check_circle</i><div class="p3"><h1>Industry Experts</h1></div></li>
+      <li style="color: white;"><i class="material-icons" style="font-size:48px;color:red">check_circle</i><div class="p4"><h1>Highily Qualified</h1></div></li>
+      <li style="color: white;"><i class="material-icons" style="font-size:48px;color:red">check_circle</i><div class="p6"><h1>Professional Teams</h1></div></li>
      </ul>
      </div>
      <div class="col-sm-3">
       <ul>
-        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p3"><h1>Deliver on Time</h1></div></li>
-        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p4"><h1>Work to Budget</h1></div></li>
-        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p7"><h1>All specialism</h1></div></li>
+        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:red">check_circle</i><div class="p3"><h1>Deliver on Time</h1></div></li>
+        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:red">check_circle</i><div class="p4"><h1>Work to Budget</h1></div></li>
+        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:red">check_circle</i><div class="p7"><h1>All specialism</h1></div></li>
        </ul>
      </div>
       <div class="col-sm-3"><ul>
-        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p3"><h1>Qulity Assurance</h1></div></li>
-        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p4"><h1>client Satisfication</h1></div></li>
-        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p7"><h1>problem solvers</h1></div></li>
+        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:red">check_circle</i><div class="p3"><h1>Qulity Assurance</h1></div></li>
+        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:red">check_circle</i><div class="p4"><h1>client Satisfication</h1></div></li>
+        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:red">check_circle</i><div class="p7"><h1>problem solvers</h1></div></li>
        </ul>
       </div>
       <div class="col-sm-3"><ul>
-        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p3"><h1>Guaranteed work</h1></div></li>
-        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p5"><h1>Any Sector</h1></div></li>
-        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p7"><h1>Recommended</h1></div></li>
+        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:red">check_circle</i><div class="p3"><h1>Guaranteed work</h1></div></li>
+        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:red">check_circle</i><div class="p5"><h1>Any Sector</h1></div></li>
+        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:red">check_circle</i><div class="p7"><h1>Recommended</h1></div></li>
        </ul>
       </div>
     </div>  
