--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,11 @@
 .topbar{
     
-    width: 1300px;
+    width: auto;
     height: 80px;
     background: radial-gradient(rgba(255, 255, 255, 0.6));
     box-shadow: 0 0 10px rgba(0,0,0,0.6);
-    margin-left: 20px;
-    border-radius: 20px;
+    /*margin-left: 20px;
+    /*border-radius: 20px;*/
     backdrop-filter: blur(2px);
     background-repeat: no-repeat;
     background-size: cover;
