--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <div class="topbar" >
-  <div class="menu">
+  <div class="menu"> 
       <ul>
           <li><img src="../assets/images/logo.jpg"  alt="company logo" class="logo"></li>
           <li><a routerLink="home">HOME</a></li>
