--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,17 +15,21 @@
     <div class="mt-4 p-5 bg-primary text-white rounded">
         <h1>WELCOME ON BOARD </h1>
         <span>Here is the list of available produts and their prices </span>
+        <div class="search">
+          <input class="srch"  placeholder="search for product" name="description">
+          <button class="btn" >search</button>
+      </div> 
+
         <div class="add">
           <button type="button" class="btn btn-primary" style="background-color:white; color:blue;" routerLink="../add-Product">
             Add product
           </button>
-       
         </div>
       </div>
   </div>
   <br>
   <br>
-  <table class="table table-hover">
+  <table datatable [dtOptions]="dtoptions" class="table table-hover">
     <thead>
       <tr>
         <th>Description</th>
@@ -40,6 +44,7 @@
         <td>{{product.amount}}</td>
       </tr>
   </table>
+
   
 </body>
 </html>
