--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
   <div class="head">
     <div class="mt-4 p-5 bg-primary text-white rounded">
         <h1>WELCOME ON BOARD </h1>
-        <span>Here is the list of available produts and their prices </span>
+        <span>Here is the list of available produts and their prices.</span>
         <div class="search">
           <input class="srch"  placeholder="search for product" name="description">
           <button class="btn" >search</button>
