--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
   </div>
   <br>
   <br>
-  <table datatable [dtOptions]="dtoptions" class="table table-hover">
+  <table datatable  class="table table-hover">
     <thead>
       <tr>
         <th>Description</th>
